# back-end-take-home

./: .classpath  .dockerignore  .editorconfig  .eslintrc.json  .gitignore  .project  Dockerfile  FlightInformationService.sln  GuestLogixServer.py  Guestlogix.sln  README.md  RouteCalculator.sln  SUBMISSION.md  SUBMISSION.md.orig  ShortestRoute.java  Vagrantfile  airtrip.sln  alembic.ini  app.js  bomber.service.j2  docker-compose.yml  entrypoint.sh  import_data.py  index.js  makefile  manage.py  migration.js  package-lock.json  package.json  playbook.yml  pom.xml  pyproject.toml  requirements.txt  run.py  server.js  start.sh  temp.txt  test_entrypoint.sh  tests.py  tsconfig.json  (+1 more)
FastestRouteCalculator/: FastestRouteCalculator.sln
FlightInformationService/: Dockerfile  FlightInformationService.csproj  Program.cs  Startup.cs
FlightRouteApi/: FlightRouteApi.sln
FlightRoutesApi/: FlightRoutesApi.sln
FlightRoutesSearchAPI/: FlightRoutesSearchAPI.sln
GuestLogixRouteAPI/: Global.asax  Global.asax.cs  GuestLogixRouteAPI.csproj  GuestLogixRouteAPI.sln  Web.config
GuestLogix_Takehome/: GuestLogix_Takehome.sln
Guestlogix/: DBContext.cs  DBRepository.cs  Global.asax  Global.asax.cs  Guestlogix.csproj  GuestlogixDatabase.sql  IDBRepository.cs  Program.cs  Startup.cs  Web.config  appsettings.json
Guestlogix.Tests/: Guestlogix.Tests.csproj
GuestlogixAPI/: GuestlogixAPI.sln
RouteCalculator/: Program.cs  RouteCalculator.csproj  Startup.cs  appsettings.json
RouteCalculatorTest/: ControllerTests.cs  RouteCalculatorServiceTests.cs  RouteCalculatorTest.csproj
(+764 files in other folders)
