[tool.poetry]
name = "bomber"
version = "0.1.0"
description = ""
authors = ["Daniel Vu <daniel.vu@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = "^2.8"
gunicorn = "^19.9"
simplejson = "^3.16"
sqlalchemy = "^1.3"
flask = "^1.1"
python-dateutil = "^2.8"
flask-cors = "^3.0"
sentry-sdk = {version = "^0.10.1", extras = ["flask"]}
alembic = "^1.0"
[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-flask = "^0.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
